fixed github link overlapping, made linear-gradient code textbold

--- a/backgroundgen.css
+++ b/backgroundgen.css
@@ -15,6 +15,7 @@ body {
   font-family: 'Poppins', sans-serif;
   color: #333;
   padding-top: 40px;
+  min-height: 100vh;
 
   /* text-transform: uppercase; */
   /* top: 15%; */
@@ -118,8 +119,7 @@ span {
 	-webkit-text-shadow: 0 0 2px rgb(255, 255, 0);
 }
 .githublogo {
-  position: absolute;
-  margin-top: 50px;
+  margin-top: 1em;
   width: 100%;
   padding: 0em;
   display: flex;
@@ -164,6 +164,7 @@ span {
   width: max-content;
   max-width: 70vw;
   margin-inline: 0;
+  font-weight: bold;
 }
 #copy-icon {
   width: min(8%, 26px);
@@ -289,8 +290,6 @@ span {
     -webkit-text-shadow: 0 0 2px rgb(255, 255, 0);
   }
   .githublogo {
-    position: absolute;
-    margin-top: 50px;
     width: 100%;
     padding: 0em;
     display: flex;
